@@ -1,5 +1,17 @@
 2008-01-06  Neal H. Walfield  <neal@gnu.org>
 
+	* object.h (object_age): Add parameter referenced.  Update users.
+	Use text-book aging algorithm.
+	* ager.c (ager_loop): Use object_age to age objects.
+
+	* object.h (object_active): New function.
+	* object.c (object_find_soft): Use it to check whether an object
+	is active.
+	(object_desc_claim): Likewise.
+	* ager.c (ager_loop): Likewise.
+
+2008-01-06  Neal H. Walfield  <neal@gnu.org>
+
 	* memory.c (memory_frame_allocate): Pass the correct arguments to
 	available_list_prev.
 
